# use-grpc-qt

./: README.md
gRPC_Client/: CMakeLists.txt  actiondelegate.cpp  actiondelegate.h  grpcserver.h  maintainingapiservice.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  tablemodel.cpp  tablemodel.h
gRPC_Client/proto/: api.proto
gRPC_Server/: CMakeLists.txt  maintainingapiservice.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
